Update secret key to password input type

--- a/src/templates/volumen-settings.twig
+++ b/src/templates/volumen-settings.twig
@@ -12,7 +12,7 @@
     placeholder: "Access Key"|t('qiniu')
 }) }}
 
-{{ forms.textField({
+{{ forms.passwordField({
     label: "Secret Key"|t('qiniu'),
     instructions: "Please enter a secret key for your Qiniu account"|t('qiniu'),
     id: 'secretKey',
